--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,22 @@
 
 <section class="hero">
 	<div class="hero__inner container">
-
+		<div class="hero__plane"></div>
+		<div class="hero__bird"></div>
+		<div class="hero__bird-bubble"></div>
+		<div class="hero__board">
+			<div class="hero__board-main">Karen NFT<br> release date TBA</div>
+			<div class="hero__board-bottom">
+				<div class="hero__board-part">Private Sale: 0.02 ETH</div>
+				<div class="hero__board-part">Public Sale: 0.04 ETH</div>
+			</div>
+		</div>
+		<div class="hero__bus"></div>
+		<div class="hero__bubbles"></div>
+		<div class="hero__panel">
+			<div class="hero__panel-text">Mint Karen’s Chiwawa for <span>FREE</span> and get Whitelisted for Karen!</div>
+			<a class="hero__panel-button" href="./">Free NFT mint now</a>
+		</div>
 	</div>
 </section>
 
@@ -57,10 +72,10 @@
 		<div class="gallery__cards">
 			<div class="gallery__card"><img src="./images/gallery-image-1.png" alt=""></div>
 			<div class="gallery__card"><img src="./images/gallery-image-2.png" alt=""></div>
-			<div class="gallery__card"><img src="./images/gallery-image-3.png" alt=""></div>
 			<div class="gallery__card"><img src="./images/gallery-image-1.png" alt=""></div>
 			<div class="gallery__card"><img src="./images/gallery-image-2.png" alt=""></div>
-			<div class="gallery__card"><img src="./images/gallery-image-3.png" alt=""></div>
+			<div class="gallery__card"><img src="./images/gallery-image-1.png" alt=""></div>
+			<div class="gallery__card"><img src="./images/gallery-image-2.png" alt=""></div>
 			<div class="gallery__card"><img src="./images/gallery-image-1.png" alt=""></div>
 			<div class="gallery__card"><img src="./images/gallery-image-2.png" alt=""></div>
 		</div>
@@ -68,54 +83,55 @@
 </section>
 
 <section class="roadmap">
-	<div class="roadmap__inner">
+	<div class="roadmap__blaster"></div>
+	<div class="roadmap__inner container">
 		<div class="roadmap__top">
-			<h2 class="roadmap__top-title title">Gallery</h2>
+			<h2 class="roadmap__top-title title">Roadmap</h2>
 			<div class="roadmap__top-text">Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</div>
-			<div class="roadmap__cards">
-				<div class="roadmap__card">
-					<div class="roadmap__date"></div>
-					<h3 class="roadmap__card-title"></h3>
-					<ul class="roadmap__card-points">
-						<li>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon</li>
-						<li>imonosysoheten synkemi en langar, jede sär makrogt farade nys, bev</li>
-						<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
-					</ul>
-				</div>
-				<div class="roadmap__card">
-					<div class="roadmap__date"></div>
-					<h3 class="roadmap__card-title"></h3>
-					<ul class="roadmap__card-points">
-						<li>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon</li>
-						<li>imonosysoheten synkemi en langar, jede sär makrogt farade nys, bev</li>
-						<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
-					</ul>
-				</div>
-				<div class="roadmap__card">
-					<div class="roadmap__date"></div>
-					<h3 class="roadmap__card-title"></h3>
-					<ul class="roadmap__card-points">
-						<li>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon</li>
-						<li>imonosysoheten synkemi en langar, jede sär makrogt farade nys, bev</li>
-						<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
-					</ul>
-				</div>
-				<div class="roadmap__card">
-					<div class="roadmap__date"></div>
-					<h3 class="roadmap__card-title"></h3>
-					<ul class="roadmap__card-points">
-						<li>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon</li>
-						<li>imonosysoheten synkemi en langar, jede sär makrogt farade nys, bev</li>
-						<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
-					</ul>
-				</div>
+		</div>
+		<div class="roadmap__cards">
+			<div class="roadmap__card">
+				<div class="roadmap__date">September 2022</div>
+				<h3 class="roadmap__card-title">Start project</h3>
+				<ul class="roadmap__card-points">
+					<li>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon</li>
+					<li>imonosysoheten synkemi en langar, jede sär makrogt farade nys, bev</li>
+					<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
+				</ul>
+			</div>
+			<div class="roadmap__card">
+				<div class="roadmap__date">September 2022</div>
+				<h3 class="roadmap__card-title">Start project</h3>
+				<ul class="roadmap__card-points">
+					<li>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon</li>
+					<li>imonosysoheten synkemi en langar, jede sär makrogt farade nys, bev</li>
+					<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
+				</ul>
+			</div>
+			<div class="roadmap__card">
+				<div class="roadmap__date">September 2022</div>
+				<h3 class="roadmap__card-title">Start project</h3>
+				<ul class="roadmap__card-points">
+					<li>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon</li>
+					<li>imonosysoheten synkemi en langar, jede sär makrogt farade nys, bev</li>
+					<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
+				</ul>
+			</div>
+			<div class="roadmap__card">
+				<div class="roadmap__date">September 2022</div>
+				<h3 class="roadmap__card-title">Start project</h3>
+				<ul class="roadmap__card-points">
+					<li>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon</li>
+					<li>imonosysoheten synkemi en langar, jede sär makrogt farade nys, bev</li>
+					<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
+				</ul>
 			</div>
 		</div>
 	</div>
 </section>
 
 <section class="partners">
-	<h2 class="partners__title title">Partners <span>&</span> collaborators</h2>
+	<h2 class="partners__title title"><span>Partners</span> <span>&</span> <span>collaborators</span></h2>
 	<div class="partners__type partners__type_1"></div>
 	<div class="partners__type partners__type_2"></div>
 </section>
