--- a/src/index.html
+++ b/src/index.html
@@ -3,35 +3,32 @@
 
 <section class="hero">
 	<div class="hero__inner container">
-		<div class="hero__plane"></div>
-		<div class="hero__bird"></div>
-		<div class="hero__bird-bubble"></div>
-		<div class="hero__board">
-			<div class="hero__board-main">Karen NFT<br> release date TBA</div>
-			<div class="hero__board-bottom">
-				<div class="hero__board-part">Private Sale: 0.02 ETH</div>
-				<div class="hero__board-part">Public Sale: 0.04 ETH</div>
-			</div>
-		</div>
-		<div class="hero__bus"></div>
-		<div class="hero__bubbles"></div>
+		<img class="hero__cloud-mobile" src="./images/hero-cloud-mobile.png" alt="">
+		<img class="hero__road" src="./images/hero-road.webp" alt="">
+		<img class="hero__comet" src="./images/hero-comet.png" alt="">
+		<img class="hero__bird" src="./images/hero-bird.png" alt="">
+		<img class="hero__bird-bubble" src="./images/hero-bird-bubble.png" alt="">
+		<img class="hero__board" src="./images/hero-board.svg" alt="">
+		<img class="hero__bubbles" src="./images/hero-bubbles.png" alt="">
+		<img class="hero__bus" src="./images/hero-bus.png" alt="">
+		<img class="hero__board-mobile" src="./images/hero-board-mobile.svg" alt="">
 		<div class="hero__panel">
 			<div class="hero__panel-text">Mint Karen’s Chiwawa for <span>FREE</span> and get Whitelisted for Karen!</div>
-			<a class="hero__panel-button" href="./">Free NFT mint now</a>
+			<a class="hero__panel-button" href="./"><span>Free NFT mint now</span></a>
 		</div>
 	</div>
 </section>
 
 <section class="feed">
 	<div class="feed__inner container">
-		<div class="feed__flyer-1"></div>
-		<div class="feed__flyer-2"></div>
-		<div class="feed__flyer-3"></div>
-		<div class="feed__flyer-4"></div>
-		<div class="feed__flyer-5"></div>
-		<div class="feed__flyer-6"></div>
-		<div class="feed__flyer-7"></div>
-		<div class="feed__flyer-8"></div>
+		<img class="feed__flyer-1" src="./images/flyer-1.png" alt="">
+		<img class="feed__flyer-2" src="./images/flyer-2.png" alt="">
+		<img class="feed__flyer-3" src="./images/flyer-3.png" alt="">
+		<img class="feed__flyer-4" src="./images/flyer-4.png" alt="">
+		<img class="feed__flyer-5" src="./images/flyer-5.png" alt="">
+		<img class="feed__flyer-6" src="./images/flyer-6.png" alt="">
+		<img class="feed__flyer-7" src="./images/flyer-7.png" alt="">
+		<img class="feed__flyer-8" src="./images/flyer-8.png" alt="">
 		<div class="feed__block">
 			<div class="feed__cards">
 				<div class="feed__card"><img src="./images/feed-chiwawa-1.gif" alt=""></div>
@@ -48,6 +45,7 @@
 			<div class="feed__buttons">
 				<a class="feed__button" href="./">Free mint</a>
 				<a class="feed__button" href="./">Join our discord</a>
+				<a class="feed__button feed__button_round" href="./"></a>
 			</div>
 		</div>
 		<div class="feed__block">
@@ -66,6 +64,7 @@
 			<div class="feed__buttons">
 				<a class="feed__button" href="./">Free mint</a>
 				<a class="feed__button" href="./">Join our discord</a>
+				<a class="feed__button feed__button_round" href="./"></a>
 			</div>
 		</div>
 	</div>
@@ -73,11 +72,11 @@
 
 <section class="gallery">
 	<div class="gallery__inner container">
-		<div class="gallery__flyer-1"></div>
-		<div class="gallery__flyer-2"></div>
-		<div class="gallery__flyer-3"></div>
-		<div class="gallery__flyer-4"></div>
-		<div class="gallery__flyer-5"></div>
+		<img class="gallery__flyer-1" src="./images/flyer-9.png" alt="">
+		<img class="gallery__flyer-2" src="./images/flyer-10.png" alt="">
+		<img class="gallery__flyer-3" src="./images/flyer-11.png" alt="">
+		<img class="gallery__flyer-4" src="./images/flyer-12.png" alt="">
+		<img class="gallery__flyer-5" src="./images/flyer-13.png" alt="">
 		<div class="gallery__top">
 			<h2 class="gallery__top-title title">Gallery</h2>
 			<div class="gallery__top-text">Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</div>
@@ -97,7 +96,7 @@
 
 <section class="roadmap">
 	<div class="roadmap__inner container">
-		<div class="roadmap__blaster"></div>
+		<img class="roadmap__blaster" src="./images/roadmap-blaster.png" alt="">
 		<div class="roadmap__top">
 			<h2 class="roadmap__top-title title">Roadmap</h2>
 			<div class="roadmap__top-text">Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</div>
@@ -130,7 +129,7 @@
 					<li>sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</li>
 				</ul>
 			</div>
-			<div class="roadmap__card">
+			<div class="roadmap__card active">
 				<div class="roadmap__date">September 2022</div>
 				<h3 class="roadmap__card-title">Start project</h3>
 				<ul class="roadmap__card-points">
@@ -143,18 +142,24 @@
 	</div>
 </section>
 
-<section class="partners">
-	<div class="partners__inner container">
-		<h2 class="partners__title title"><span>Partners</span> <span>&</span> <span>collaborators</span></h2>
-		<div class="partners__type partners__type_1"></div>
-		<div class="partners__type partners__type_2"></div>
-	</div>
-</section>
-
 <section class="info">
-	<div class="info__inner container">
-		<div class="info__binoculars"></div>
+	<div class="info__partners container">
+		<h2 class="info__title info__title_partners title">
+			<span>Partners</span> <span>&</span> <span>collabora&shy;tors</span>
+		</h2>
+		<div class="info__type info__type_1"></div>
+		<div class="info__type info__type_2"></div>
+	</div>
+	<div class="info__feed container">
+		<h2 class="info__title info__title_faq title">FAQ</h2>
+		<img class="info__binoculars" src="./images/info-binoculars.png" alt="">
 		<div class="info__items">
+			<div class="info__item">
+				<h3 class="info__subtitle">How to buy?</h3>
+				<div class="info__text">
+					<p>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</p>
+				</div>
+			</div>
 			<div class="info__item">
 				<h3 class="info__subtitle">How to buy?</h3>
 				<div class="info__text">
