add televisor section

--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,12 @@
 	</div>
 </section>
 
-<section class="feed">
+<section class="feed feed_one">
 	<div class="feed__inner container">
 		<img class="feed__flyer-1" src="./images/flyer-1.png" alt="">
 		<img class="feed__flyer-2" src="./images/flyer-2.png" alt="">
 		<img class="feed__flyer-3" src="./images/flyer-3.png" alt="">
 		<img class="feed__flyer-4" src="./images/flyer-4.png" alt="">
-		<img class="feed__flyer-5" src="./images/flyer-5.png" alt="">
-		<img class="feed__flyer-6" src="./images/flyer-6.png" alt="">
-		<img class="feed__flyer-7" src="./images/flyer-7.png" alt="">
-		<img class="feed__flyer-8" src="./images/flyer-8.png" alt="">
 		<div class="feed__block">
 			<div class="feed__cards">
 				<div class="feed__card"><img src="./images/feed-chiwawa-1.gif" alt=""></div>
@@ -48,6 +44,24 @@
 				<a class="feed__button feed__button_round" href="./"></a>
 			</div>
 		</div>
+	</div>
+</section>
+
+<section class="televisor">
+	<div class="televisor__inner container">
+		<div class="televisor__video">
+			<div class="televisor__frame" style="background-image: url('https://i.ytimg.com/vi_webp/wwX7pEJB3BQ/maxresdefault.webp');"><iframe frameborder="0" allow="accelerometer; autoplay; gyroscope;"></iframe></div>
+			<button class="televisor__play" data-youtube-src="https://www.youtube.com/embed/wwX7pEJB3BQ?autoplay=1&modestbranding=1&controls=0&rel=0&showinfo=0&enablejsapi=1"></button>
+		</div>
+	</div>
+</section>
+
+<section class="feed feed_two">
+	<div class="feed__inner container">
+		<img class="feed__flyer-5" src="./images/flyer-5.png" alt="">
+		<img class="feed__flyer-6" src="./images/flyer-6.png" alt="">
+		<img class="feed__flyer-7" src="./images/flyer-7.png" alt="">
+		<img class="feed__flyer-8" src="./images/flyer-8.png" alt="">
 		<div class="feed__block">
 			<div class="feed__cards">
 				<div class="feed__card"><img src="./images/feed-wife-1.gif" alt=""></div>
@@ -142,45 +156,48 @@
 	</div>
 </section>
 
-<section class="info">
-	<div class="info__partners container">
-		<h2 class="info__title info__title_partners title">
+<section class="partners">
+	<div class="partners__inner container">
+		<h2 class="partners__title title">
 			<span>Partners</span> <span>&</span> <span>collabora&shy;tors</span>
 		</h2>
-		<div class="info__type info__type_1"></div>
-		<div class="info__type info__type_2"></div>
+		<div class="partners__type partners__type_1"></div>
+		<div class="partners__type partners__type_2"></div>
 	</div>
-	<div class="info__feed container">
-		<h2 class="info__title info__title_faq title">FAQ</h2>
-		<img class="info__binoculars" src="./images/info-binoculars.png" alt="">
-		<div class="info__items">
-			<div class="info__item">
-				<h3 class="info__subtitle">How to buy?</h3>
-				<div class="info__text">
+</section>
+
+<section class="faq">
+	<div class="faq__inner container">
+		<img class="faq__binoculars" src="./images/info-binoculars.png" alt="">
+		<div class="faq__items">
+			<h2 class="faq__title title">FAQ</h2>
+			<div class="faq__item">
+				<h3 class="faq__subtitle">How to buy?</h3>
+				<div class="faq__text">
 					<p>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</p>
 				</div>
 			</div>
-			<div class="info__item">
-				<h3 class="info__subtitle">How to buy?</h3>
-				<div class="info__text">
+			<div class="faq__item">
+				<h3 class="faq__subtitle">How to buy?</h3>
+				<div class="faq__text">
 					<p>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</p>
 				</div>
 			</div>
-			<div class="info__item">
-				<h3 class="info__subtitle">How to buy?</h3>
-				<div class="info__text">
+			<div class="faq__item">
+				<h3 class="faq__subtitle">How to buy?</h3>
+				<div class="faq__text">
 					<p>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</p>
 				</div>
 			</div>
-			<div class="info__item">
-				<h3 class="info__subtitle">How to buy?</h3>
-				<div class="info__text">
+			<div class="faq__item">
+				<h3 class="faq__subtitle">How to buy?</h3>
+				<div class="faq__text">
 					<p>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</p>
 				</div>
 			</div>
-			<div class="info__item">
-				<h3 class="info__subtitle">How to buy?</h3>
-				<div class="info__text">
+			<div class="faq__item">
+				<h3 class="faq__subtitle">How to buy?</h3>
+				<div class="faq__text">
 					<p>Lörem ipsum biofaktisk riliga ifall äbeplagt oaktat lende sepogon i monosysoheten synkemi en langar, jede sär makrogt farade nys, bev sodosa, som semiliga. Ver oliga ribel, i parapogon pisyktig fast ride jöll.</p>
 				</div>
 			</div>
