add televisor section

--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
 				<p>You seriously think you can deal with Karen right away? Lol! Friend, you need to prepare yourself for  world-class brain bashing, common sense lacking, inner peace demolishing experience. The only way to get on that level is to handle Karen’s pet first. Karen’s Chiwawa is a FREE collection of 1234 NFTs, each of them gets their owner whitelested for Karen. Being whitelisted for Karen will give you access to Karen’s Private Sale which will take place mid August (TBA).</p>
 			</div>
 			<div class="feed__buttons">
-				<a class="feed__button" href="./">Free mint</a>
-				<a class="feed__button" href="./">Join our discord</a>
-				<a class="feed__button feed__button_round" href="./"></a>
+				<a class="feed__button button" href="./">Free mint</a>
+				<a class="feed__button button" href="./">Join our discord</a>
+				<a class="feed__button feed__button_round button" href="./"></a>
 			</div>
 		</div>
 	</div>
@@ -53,6 +53,7 @@
 			<div class="televisor__frame" style="background-image: url('https://i.ytimg.com/vi_webp/wwX7pEJB3BQ/maxresdefault.webp');"><iframe frameborder="0" allow="accelerometer; autoplay; gyroscope;"></iframe></div>
 			<button class="televisor__play" data-youtube-src="https://www.youtube.com/embed/wwX7pEJB3BQ?autoplay=1&modestbranding=1&controls=0&rel=0&showinfo=0&enablejsapi=1"></button>
 		</div>
+		<a class="televisor__button button" href="./">Follow us</a>
 	</div>
 </section>
 
@@ -76,9 +77,9 @@
 				<p>You seriously think you can deal with Karen right away? Lol! Friend, you need to prepare yourself for  world-class brain bashing, common sense lacking, inner peace demolishing experience. The only way to get on that level is to handle Karen’s pet first. Karen’s Chiwawa is a FREE collection of 1234 NFTs, each of them gets their owner whitelested for Karen. Being whitelisted for Karen will give you access to Karen’s Private Sale which will take place mid August (TBA).</p>
 			</div>
 			<div class="feed__buttons">
-				<a class="feed__button" href="./">Free mint</a>
-				<a class="feed__button" href="./">Join our discord</a>
-				<a class="feed__button feed__button_round" href="./"></a>
+				<a class="feed__button button" href="./">Free mint</a>
+				<a class="feed__button button" href="./">Join our discord</a>
+				<a class="feed__button feed__button_round button" href="./"></a>
 			</div>
 		</div>
 	</div>
