revision of partners section

--- a/src/index.html
+++ b/src/index.html
@@ -162,8 +162,18 @@
 		<h2 class="partners__title title">
 			<span>Partners</span> <span>&</span> <span>collabora&shy;tors</span>
 		</h2>
-		<div class="partners__type partners__type_1"></div>
-		<div class="partners__type partners__type_2"></div>
+		<div class="partners__type partners__type_1">
+			<img src="./images/partners-type-logo-1-black.png" alt="">
+			<img src="./images/partners-type-logo-2-black.png" alt="">
+			<img src="./images/partners-type-logo-3-black.png" alt="">
+			<img src="./images/partners-type-logo-4-black.png" alt="">
+		</div>
+		<div class="partners__type partners__type_2">
+			<img src="./images/partners-type-logo-1-white.png" alt="">
+			<img src="./images/partners-type-logo-2-white.png" alt="">
+			<img src="./images/partners-type-logo-3-white.png" alt="">
+			<img src="./images/partners-type-logo-4-white.png" alt="">
+		</div>
 	</div>
 </section>
 
